--- a/udacity-c3-deployment/k8s/frontend-deployment.yaml
+++ b/udacity-c3-deployment/k8s/frontend-deployment.yaml
@@ -1,29 +1,30 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: frontend
   name: frontend
 spec:
-  replicas: 2
+  selector:
+    matchLabels:
+      service: frontend
+  replicas: 1
   template:
     metadata:
       labels:
         service: frontend
-        api: external        
     spec:
       containers:
-      - image: scheele/udacity-frontend:local
-        name: frontend
-        imagePullPolicy: Always          
-        ports:
-        - containerPort: 80
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "1024Mi"
-            cpu: "500m"                
+        - image: patrikb/udacity-frontend
+          name: frontend
+          imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "1024Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 80
       restartPolicy: Always
-
