--- a/udacity-c3-frontend/Dockerfile
+++ b/udacity-c3-frontend/Dockerfile
@@ -14,5 +14,6 @@ RUN ionic build
 ## Run 
 FROM nginx:alpine
 #COPY www /usr/share/nginx/html
+COPY docker-files/nginx.conf /etc/nginx/nginx.conf
 COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
 
