--- a/udacity-c3-frontend/docker-files/nginx.conf
+++ b/udacity-c3-frontend/docker-files/nginx.conf
@@ -25,15 +25,18 @@ http {
     proxy_set_header   X-Forwarded-Host $server_name;
     
     server {
-        listen 8080;
+        #listen 8080;
         location /api/v0/feed {
             proxy_pass         http://feed;
         }
         location /api/v0/users {
             proxy_pass         http://user;
         }            
+
         location / {
-            proxy_pass         http://frontend;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
     }
 
