Develop .travis.yml. Execute 'docker push' for images and 'kubectl apply...' for deployements.

--- a/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+++ b/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-feed
     spec:
       containers:
-        - image: patrikb/udacity-restapi-feed
+        - image: patrikb/udacity-restapi-feed:latest
           name: backend-feed
           imagePullPolicy: Always
           resources:
