--- a/udacity-c3-deployment/k8s/frontend-deployment.yaml
+++ b/udacity-c3-deployment/k8s/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: frontend
     spec:
       containers:
-        - image: patrikb/udacity-frontend
+        - image: patrikb/udacity-frontend:latest
           name: frontend
           imagePullPolicy: Always
           resources:
