--- a/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: reverseproxy
     spec:
       containers:
-        - image: patrikb/reverseproxy
+        - image: patrikb/reverseproxy:latest
           name: reverseproxy
           imagePullPolicy: Always
           resources:
