--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,13 @@ before_install:
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
+  - echo "${DOCKER_USERNAME}"
+  - echo "${DOCKER_PASSWORD}"
   - docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
   - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
   - unzip awscliv2.zip
   - sudo ./aws/install
+  - mkdir ~/.aws
   - echo "[default]" >> ~/.aws/credentials
   - echo "aws_access_key_id = ${AWS_ACCESS_KEY_ID}" >> ~/.aws/credentials
   - echo "aws_secret_access_key = ${AWS_SECRET_ACCESS_KEY}" >> ~/.aws/credentials
@@ -27,10 +30,14 @@ before_install:
   - kubectl get svc
 
 install:
-  - docker-compose -f lesson-6-Independent-Releases-and-Deployment/exercise/udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel
+  - docker-compose -f udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel
 
 after_script:
   - docker push patrikb/reverseproxy:latest
   - docker push patrikb/udacity-frontend:latest
   - docker push patrikb/udacity-restapi-user:latest
   - docker push patrikb/udacity-restapi-feed:latest
+  - kubectl apply -f udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/backend-user-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/frontend-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
