--- a/udacity-c3-deployment/k8s/backend-user-deployment.yaml
+++ b/udacity-c3-deployment/k8s/backend-user-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-user
     spec:
       containers:
-        - image: patrikb/udacity-restapi-user
+        - image: patrikb/udacity-restapi-user:latest
           name: backend-user
           imagePullPolicy: Always
           resources:
